--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -11,15 +11,23 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up Flutter SDK
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: 3.35.5
+          channel: stable
+          cache: true
 
-      - name: Get dependencies
+      - name: Check Flutter version
+        run: flutter --version
+
+      - name: Install dependencies
         run: flutter pub get
 
+      - name: Analyze code
+        run: flutter analyze
+
       - name: Run tests
-        run: flutter test
+        run: flutter test --no-pub
