--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,9 @@ dependencies:
   intl: ^0.20.2
   qr_flutter: ^4.1.0
   cupertino_icons: ^1.0.8
-  dio: ^5.8.0+1
+  dio: ^5.9.0
   path_provider: ^2.1.5
-  provider: ^6.1.5
+  provider: ^6.1.5+1
   shared_preferences: ^2.5.3
   flutter_lints: ^6.0.0
 
