--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Analyze code
         run: flutter analyze
 
-      - name: Run tests
-        run: flutter test --no-pub
+#      - name: Run tests
+#        run: flutter test --no-pub
