--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,13 +1,3 @@
-org.gradle.jvmargs=--enable-native-access=ALL-UNNAMED
+org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-# Gradle properties
-org.gradle.parallel=true
-org.gradle.caching=true
-# System properties
-systemProp.pts.enabled=true
-systemProp.log4j2.disableJmx=true
-systemProp.file.encoding=UTF-8
-# Project properties
-kotlin.code.style=official
-android.nonTransitiveRClass=false
