--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-    <key>method</key>
-    <string>ad-hoc</string>
-    <key>stripSwiftSymbols</key>
-    <true/>
-    <key>compileBitcode</key>
-    <false/>
-</dict>
+    <dict>
+        <key>method</key>
+        <string>development</string>
+        <key>signingStyle</key>
+        <string>automatic</string>
+        <key>compileBitcode</key>
+        <false/>
+        <key>stripSwiftSymbols</key>
+        <true/>
+<!--        <key>teamID</key>-->
+<!--        <string>H34663L48C</string>-->
+    </dict>
 </plist>
